unpackaged/objects/copado__Team_Dependency__c.object
<CustomObject>
	<fields>
		<fullName>copado__Child_User_Story_Release__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Child User Story Release</label>
		<referenceTo>copado__Release__c</referenceTo>
		<relationshipLabel>User Story Dependencies (Child User Story Release)</relationshipLabel>
		<relationshipName>User_Story_Dependencies</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Child_User_Story_Status__c</fullName>
		<description>The Status of the child user story</description>
		<formula>Text( copado__Dependent_User_Story__r.copado__Status__c )</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<inlineHelpText>The Status of the child user story</inlineHelpText>
		<label>Child User Story Status</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Deliverable__c</fullName>
		<inlineHelpText>Short description (255 chars max) of the User Story that is needed from the other team. More detailed description can be added to the Notes field.</inlineHelpText>
		<label>Deliverable</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Dependency_Status__c</fullName>
		<inlineHelpText>Status of the dependency between two User Stories. Example: Prioritized, Committed, or Completed. You can manually edit this field. However, it will be automatically marked as Completed when you mark the Parent User Story to Completed.</inlineHelpText>
		<label>Dependency Status</label>
		<type>Picklist</type>
		<valueSet>
			<restricted>true</restricted>
			<valueSetDefinition>
				<value>
					<fullName>New</fullName>
					<default>true</default>
					<label>New</label>
				</value>
				<value>
					<fullName>More Info Needed</fullName>
				</value>
				<value>
					<fullName>Prioritized</fullName>
				</value>
				<value>
					<fullName>Committed</fullName>
				</value>
				<value>
					<fullName>Completed</fullName>
				</value>
				<value>
					<fullName>Deferred</fullName>
				</value>
				<value>
					<fullName>Never</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copado__Dependent_Team__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<description>The Team that is dependent on another team to provide the User Story.</description>
		<inlineHelpText>The Team that is dependent on another team to provide the User Story.</inlineHelpText>
		<label>Child User Story Team</label>
		<referenceTo>copado__Team__c</referenceTo>
		<relationshipLabel>User Story Dependencies (Dependent Team)</relationshipLabel>
		<relationshipName>Team_Dependencies_For_Team</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Dependent_User_Story__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<description>The User Story that is dependent on the completion of the parent user story.</description>
		<inlineHelpText>The User Story that is dependent on the completion of the parent user story.</inlineHelpText>
		<label>Child User Story</label>
		<referenceTo>copado__User_Story__c</referenceTo>
		<relationshipLabel>Parent User Stories</relationshipLabel>
		<relationshipName>Team_Dependencies_For_UStory</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Needed_by_Date__c</fullName>
		<label>Needed by (Date)</label>
		<type>Date</type>
	</fields>
	<fields>
		<fullName>copado__Notes__c</fullName>
		<label>Notes</label>
		<length>2000</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>copado__Parent_User_Story_Status__c</fullName>
		<description>The Status of the parent user story</description>
		<formula>Text( copado__Provider_User_Story__r.copado__Status__c )</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<inlineHelpText>The Status of the parent user story</inlineHelpText>
		<label>Parent User Story Status</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Provider_Team__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<description>The team that will provide the deliverable to fulfill this dependency.</description>
		<inlineHelpText>The team that will provide the deliverable to fulfill this dependency.</inlineHelpText>
		<label>Parent User Story Team</label>
		<referenceTo>copado__Team__c</referenceTo>
		<relationshipLabel>User Story Dependencies (Provider Team)</relationshipLabel>
		<relationshipName>Team_Dependencies_On_Team</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Provider_User_Story__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<description>The record representing the User Story to satisfy the deliverable of this dependency.</description>
		<inlineHelpText>The record representing the User Story to satisfy the deliverable of this dependency.</inlineHelpText>
		<label>Parent User Story</label>
		<referenceTo>copado__User_Story__c</referenceTo>
		<relationshipLabel>Child User Stories</relationshipLabel>
		<relationshipName>Team_Dependencies_On_UStory</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Relationship_Type__c</fullName>
		<inlineHelpText>Enter the value for the Parent-Child relationship type for your User Stories. By default, the field value is set to &quot;Relates-to.&quot; You can add other values, as this is an unrestricted list.</inlineHelpText>
		<label>Relationship Type</label>
		<type>Picklist</type>
		<valueSet>
			<valueSetDefinition>
				<value>
					<fullName>relates to</fullName>
					<default>true</default>
					<label>relates to</label>
				</value>
				<value>
					<fullName>duplicating</fullName>
				</value>
				<value>
					<fullName>blocking</fullName>
				</value>
				<value>
					<fullName>fixing</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copado__Release__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Parent User Story Release</label>
		<referenceTo>copado__Release__c</referenceTo>
		<relationshipLabel>User Story Dependencies</relationshipLabel>
		<relationshipName>Team_Dependencies</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Skip_Dependency__c</fullName>
		<formula>OR( ISPICKVAL( copado__Dependency_Status__c ,&apos;Completed&apos;), ISPICKVAL( copado__Dependency_Status__c ,&apos;Deferred&apos;), ISPICKVAL( copado__Dependency_Status__c ,&apos;Never&apos;))</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<inlineHelpText>The value is set to True whenever a Dependency Status is set to Completed, Deferred, or Never.</inlineHelpText>
		<label>Skip Dependency</label>
		<type>Checkbox</type>
	</fields>
	<label>User Story Dependency</label>
	<listViews>
		<fullName>copado__All</fullName>
		<columns>NAME</columns>
		<columns>copado__Provider_User_Story__c</columns>
		<columns>copado__Parent_User_Story_Status__c</columns>
		<columns>copado__Dependent_User_Story__c</columns>
		<columns>copado__Child_User_Story_Status__c</columns>
		<columns>copado__Dependency_Status__c</columns>
		<columns>copado__Dependent_Team__c</columns>
		<columns>copado__Provider_Team__c</columns>
		<filterScope>Everything</filterScope>
		<label>All</label>
		<language>en_US</language>
	</listViews>
	<nameField>
		<displayFormat>UD-{0000000}</displayFormat>
		<label>User Story Dependency Name</label>
		<type>AutoNumber</type>
	</nameField>
	<pluralLabel>User Story Dependencies</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>